--- a/src/main/resources/client/index1.html
+++ b/src/main/resources/client/index1.html
@@ -68,12 +68,12 @@
   </header>
   <main class="main">
     <div class="msgs" id="msgs">
-      Connecting to the app…
+      <li>Connecting to the app…</li>
       ${messages_on_connection}
-      <li>Ms</li>
-      <li>Ms</li>
-      <li>Ms</li>
-      <li>Ms</li>
+<!--      <li>Ms</li>-->
+<!--      <li>Ms</li>-->
+<!--      <li>Ms</li>-->
+<!--      <li>Ms</li>-->
     </div>
   </main>
   <footer class="footer">
